--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "start": "app.js"
   },
-  "version": "0.0.0-43",
+  "version": "0.0.0-44",
   "engines": {
     "node": "0.8.x"
   },
   "dependencies": {
     "express": ">= 3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "jsdom": "0.5.x"
   }
 }
